@@ -608,4 +608,5 @@ Changes since version 1.5-16
 	* lag/lead: fixed bug with dropped factor levels, added testfile tests/test_lag_lead_factor_levels.R.
 	* is.pconsecutive: * new function to check if time periods are consecutive per individual,
 	                   * better NA handling, added argument rm.na.tindex.
+	* punbalancedness: data frame interface gains 'index' argument.
 	
